--- a/nutritionista/main_app/templates/about.html
+++ b/nutritionista/main_app/templates/about.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+
+<h1> About the Nutritionista </h1>
+<hr />
+<p>Here you can keep track on your calories intake, and what you've been eating! Now you will have more control about your eating habits!</p>
+
+{% endblock %}
+
+
 
   
-</body>
-</html>
