--- a/nutritionista/main_app/templates/base.html
+++ b/nutritionista/main_app/templates/base.html
@@ -19,7 +19,7 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
-          <li><a href="/cats"> My Days</a></li>
+          <li><a href="/days"> My Days</a></li>
         </ul>
       </div>
     </nav>
