--- a/nutritionista/main_app/templates/base.html
+++ b/nutritionista/main_app/templates/base.html
@@ -31,6 +31,8 @@
             {% if user.is_authenticated %}
             <li><a href="{% url 'index' %}">My Days</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
+            <li><a href="{% url 'days_create' %}">Add a Day</a></li>
+            <li><a href="{% url 'index' %}">View All My Days</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log In</a></li>
