--- a/nutritionista/main_app/templates/days/detail.html
+++ b/nutritionista/main_app/templates/days/detail.html
@@ -1,11 +1,14 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Day Details</h1>
 <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ day.date}}</span>
+  <div class="card-content">
+    <span class="card-title">{{ day.date}}</span>
+    <div class="card-action">
+      <a href="{% url 'days_update' day.id %}">Edit</a>
+      <a href="{% url 'days_delete' day.id %}">Delete</a>
     </div>
   </div>
+</div>
 
 {% endblock %}
