--- a/nutritionista/main_app/templates/main_app/day_form.html
+++ b/nutritionista/main_app/templates/main_app/day_form.html
@@ -4,7 +4,7 @@
 <h1>Add Day</h1>
 {% endif %}
 <!-- Leaving the action empty makes the form post to the same url used to display it -->
-<form action="" method="post">
+<form action="{% url 'days_create' %}" method="post">
   <!-- Django requires the following for security purposes -->
   {% csrf_token %}
   <table>
