--- a/nutritionista/main_app/templates/base.html
+++ b/nutritionista/main_app/templates/base.html
@@ -29,12 +29,11 @@
           <ul class="right">
             <li><a href="{% url 'about' %}">About</a></li>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'foods_create' %}">Add a Food</a></li>
             <li><a href="{% url 'index' %}">My Days</a></li>
-            <li><a href="{% url 'foods_index' %}">View All Foods</a></li>
-            <li><a href="{% url 'logout' %}">Log Out</a></li>
             <li><a href="{% url 'days_create' %}">Add a Day</a></li>
-            <li><a href="{% url 'index' %}">View All My Days</a></li>
+            <li><a href="{% url 'foods_index' %}">Food</a></li>
+            <li><a href="{% url 'foods_create' %}">Add a Food</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log In</a></li>
