--- a/nutritionista/main_app/templates/base.html
+++ b/nutritionista/main_app/templates/base.html
@@ -30,9 +30,9 @@
             <li><a href="{% url 'about' %}">About</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'index' %}">My Days</a></li>
-            <li><a href="{% url 'days_create' %}">Add a Day</a></li>
+            <li><a href="{% url 'days_create' %}">Add Day</a></li>
             <li><a href="{% url 'foods_index' %}">Food</a></li>
-            <li><a href="{% url 'foods_create' %}">Add a Food</a></li>
+            <li><a href="{% url 'foods_create' %}">Add Food</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
