--- a/nutritionista/main_app/templates/days/detail.html
+++ b/nutritionista/main_app/templates/days/detail.html
@@ -1,14 +1,36 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Day Details</h1>
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ day.date}}</span>
-    <div class="card-action">
-      <a href="{% url 'days_update' day.id %}">Edit</a>
-      <a href="{% url 'days_delete' day.id %}">Delete</a>
+<h1>Day Meals</h1>
+
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ day.date }}</span>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'days_update' day.id %}">Edit</a>
+        <a href="{% url 'days_delete' day.id %}">Delete</a>
+      </div>
     </div>
   </div>
+  <div class="col s6">
+    <table class="striped">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Meal</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for meals in day.meals_set.all %}
+        <tr>
+          <td>{{meals.date}}</td>
+          <td>{{mdeals.get_meal_display}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
-
 {% endblock %}
