--- a/nutritionista/main_app/templates/days/detail.html
+++ b/nutritionista/main_app/templates/days/detail.html
@@ -15,6 +15,10 @@
     </div>
   </div>
   <div class="col s6">
+    <form action="{% url 'add_meals' day.id %}" method="post"></form>
+      {% csrf_token %} {{ meals_form.as_p }}
+      <input type="submit" class="btn" value="Add Food" />
+    </form>
     <table class="striped">
       <thead>
         <tr>
