--- a/nutritionista/main_app/templates/home.html
+++ b/nutritionista/main_app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="wellcome">
+<div class="welcome">
 <h1> Welcome to Nutritionista </h1>
 <h4>Sign In and have control of your food!</h4>
 </div>
