--- a/nutritionista/main_app/templates/days/index.html
+++ b/nutritionista/main_app/templates/days/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>My Days</h1>
+<h1 class="title">My Days</h1>
 
 {% for day in days %}
-  <div class="card">
+  <div class="card" id="dayBg">
     <a href="/days/{{ day.id }}"> 
         <div class="card-content">
         <span class="card-title">{{ day.date }}</span>
