--- a/nutritionista/main_app/templates/main_app/day_confirm_delete.html
+++ b/nutritionista/main_app/templates/main_app/day_confirm_delete.html
@@ -8,7 +8,7 @@
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" value="Yes - Delete!" class="btn" />
+  <input type="submit" value="Yes - Delete!" class="btn grey darken-3" />
   <a href="{% url 'detail' day.id %}">Cancel</a>
 </form>
 {% endblock %}
