--- a/nutritionista/main_app/templates/main_app/day_form.html
+++ b/nutritionista/main_app/templates/main_app/day_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %} {% if object %}
-<h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+<h1 class="title">Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
-<h1>Add Day</h1>
+<h1 class="title">Add Day</h1>
 {% endif %}
 <!-- Leaving the action empty makes the form post to the same url used to display it -->
 <form action="" method="post">
@@ -11,6 +11,6 @@
     <!-- Render the inputs inside of <tr>s & <td>s -->
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Submit!" class="btn" />
+  <input type="submit" value="Submit!" class="btn grey darken-3" />
 </form>
 {% endblock %}
