--- a/nutritionista/main_app/templates/main_app/food_detail.html
+++ b/nutritionista/main_app/templates/main_app/food_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Food Details</h1>
+<h1 class="title">Food Details</h1>
 
-<div class="row">
-  <div class="col s6 col-offset-3">
-    <div class="card">
+<div class="row" >
+  <div class="col s6 col-offset-3" >
+    <div class="card" id="foodCard" >
       <div class="card-content">
         <span class="card-title">{{ food.name }}</span>
         <p>Colories: {{ food.calories }}</p>
