--- a/nutritionista/main_app/templates/main_app/food_form.html
+++ b/nutritionista/main_app/templates/main_app/food_form.html
@@ -2,9 +2,9 @@
 
 {% block content %}
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+    <h1 class="title">Edit <span class="red-text">{{object.name}}</span></h1>
   {% else %}
-    <h1>Add Food</h1>
+    <h1 class="title">Add Food</h1>
   {% endif %}
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
   <form action="" method="post">
@@ -14,6 +14,6 @@
       <!-- Render the inputs inside of <tr>s & <td>s -->
       {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit!" class="btn">
+    <input type="submit" value="Submit!" class="btn grey darken-3">
   </form>
 {% endblock %}
