--- a/nutritionista/main_app/templates/main_app/food_list.html
+++ b/nutritionista/main_app/templates/main_app/food_list.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Food List</h1>
+<h1 class="title">Food List</h1>
 
 {% for food in food_list %}
   <a href="{% url 'foods_detail' food.id %}">
-    <div class="card">
+    <div class="card" id="foodCard">
         <div class="card-content">
             <span class="card-title">{{ food.name }}</span>
             
