--- a/nutritionista/main_app/templates/registration/login.html
+++ b/nutritionista/main_app/templates/registration/login.html
@@ -3,7 +3,7 @@
 <h1>Log In</h1>
 <form method="post" action="{% url 'login' %}">
   {% csrf_token %} {{ form.as_p }}
-  <input type="submit" class="btn" value="login" />
+  <input type="submit" class="btn grey darken-3" value="login" />
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 {% endblock %}
