--- a/nutritionista/main_app/templates/registration/signup.html
+++ b/nutritionista/main_app/templates/registration/signup.html
@@ -6,6 +6,6 @@
 {% endif %}
 <form method="post" action="{% url 'signup' %}">
   {% csrf_token %} {{ form.as_p }}
-  <input type="submit" class="btn" value="signup" />
+  <input type="submit" class="btn grey darken-3" value="signup" />
 </form>
 {% endblock %}
