--- a/nutritionista/main_app/templates/base.html
+++ b/nutritionista/main_app/templates/base.html
@@ -16,6 +16,7 @@
       type="text/css"
       href="{% static 'css/style.css' %}"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
     <header class="navbar-fixed">
@@ -47,6 +48,15 @@
       <div class="right">
         All Rights Reserved, &copy; 2021 Nutritionista &nbsp;
       </div>
+      <script>
+        var dateEl = document.getElementById("id_date");
+        M.Datepicker.init(dateEl, {
+          format: "yyyy-mm-dd",
+          defaultDate: new Date(),
+          setDefaultDate: true,
+          autoClose: true,
+        });
+      </script>
     </footer>
   </body>
 </html>
