--- a/nutritionista/main_app/templates/days/detail.html
+++ b/nutritionista/main_app/templates/days/detail.html
@@ -15,15 +15,15 @@
     </div>
   </div>
   <div class="col s6">
-    <form action="{% url 'add_meals' day.id %}" method="post"></form>
-      {% csrf_token %} {{ meals_form.as_p }}
+    <form action="{% url 'add_meals' day.id %}" method="post" class="col s6"></form>
+      {% csrf_token %}{{ meals_form.as_p }}
       <input type="submit" class="btn" value="Add Food" />
     </form>
     <table class="striped">
       <thead>
         <tr>
-          <th>Food</th>
           <th>Meal</th>
+          <th>Food</th>
           <th>Portion</th>
           <th>Calories</th>
         </tr>
@@ -31,8 +31,8 @@
       <tbody>
         {% for meals in day.meals_set.all %}
         <tr>
-          <td>{{meals.food}}</td>
           <td>{{meals.meal}}</td>
+          <td>{{meals.food}}</td>
           <td>{{meals.portion}}</td>
           <td>{{meals.calories}}</td>
           <td>{{mdeals.get_meal_display}}</td>
@@ -42,4 +42,12 @@
     </table>
   </div>
 </div>
+<script>
+  // add additional JS to initialize select below
+  var selectEl = document.getElementById('id_meal');
+  M.FormSelect.init(selectEl);
+
+  var foodEl = document.getElementById('id_food');
+  M.FormSelect.init(foodEl);
+</script>
 {% endblock %}
