cleaned up code

--- a/nutritionista/main_app/templates/about.html
+++ b/nutritionista/main_app/templates/about.html
@@ -1,13 +1,11 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
-<div class ="about">
-<h1> About the Nutritionista </h1>
-<hr />
-<h4>Here you can keep track on your calories intake, and what you've been eating! Now you will have more control about your eating habits!</h4>
+<div class="about">
+  <h1>About the Nutritionista</h1>
+  <hr />
+  <h4>
+    Here you can keep track on your calories intake, and what you've been
+    eating! Now you will have more control about your eating habits!
+  </h4>
 </div>
 {% endblock %}
-
-
-
-  
