--- a/nutritionista/main_app/templates/home.html
+++ b/nutritionista/main_app/templates/home.html
@@ -1,7 +1,6 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="welcome">
-<h1> Welcome to Nutritionista </h1>
-<h4>Sign In and have control of your food!</h4>
+  <h1>Welcome to Nutritionista</h1>
+  <h4>Sign In and have control of your food!</h4>
 </div>
 {% endblock %}
