--- a/nutritionista/main_app/templates/main_app/food_form.html
+++ b/nutritionista/main_app/templates/main_app/food_form.html
@@ -1,19 +1,13 @@
-{% extends 'base.html' %}
-
-{% block content %}
-  {% if object %}
-    <h1 class="title">Edit <span class="red-text">{{object.name}}</span></h1>
-  {% else %}
-    <h1 class="title">Add Food</h1>
-  {% endif %}
-  <!-- Leaving the action empty makes the form post to the same url used to display it -->
-  <form action="" method="post">
-    <!-- Django requires the following for security purposes -->
-    {% csrf_token %}
-    <table>
-      <!-- Render the inputs inside of <tr>s & <td>s -->
-      {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit!" class="btn grey darken-3">
-  </form>
+{% extends 'base.html' %} {% block content %} {% if object %}
+<h1 class="title">Edit <span class="red-text">{{object.name}}</span></h1>
+{% else %}
+<h1 class="title">Add Food</h1>
+{% endif %}
+<form action="" method="post">
+  {% csrf_token %}
+  <table>
+    {{ form.as_table }}
+  </table>
+  <input type="submit" value="Submit!" class="btn grey darken-3" />
+</form>
 {% endblock %}
