cleaned up a few things

--- a/nutritionista/main_app/templates/main_app/day_confirm_delete.html
+++ b/nutritionista/main_app/templates/main_app/day_confirm_delete.html
@@ -3,7 +3,7 @@
 
 <h4>
   Are you sure you want to delete
-  <span class="teal-text">{{ object.date }}</span>?
+  <span class="red-text">{{ object.date }}</span>?
 </h4>
 
 <form action="" method="POST">
