--- a/nutritionista/main_app/templates/days/detail.html
+++ b/nutritionista/main_app/templates/days/detail.html
@@ -2,48 +2,50 @@
 
 <h1 class="title">Day Meals</h1>
 
-<div class="row">
-  <div class="col s6">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">{{ day.date }}</span>
-      </div>
-      <div class="card-action">
-        <a href="{% url 'days_update' day.id %}">Edit</a>
-        <a href="{% url 'days_delete' day.id %}">Delete</a>
-      </div>
+<div class="col s6">
+  <div class="card" id="dayBg">
+    <div class="card-content">
+      <span class="card-title">{{ day.date }}</span>
+    </div>
+    <div class="card-action">
+      <a href="{% url 'days_update' day.id %}">Edit</a>
+      <a href="{% url 'days_delete' day.id %}">Delete</a>
     </div>
   </div>
-  <div class="col s6">
-    <form action="{% url 'add_meals' day.id %}" method="post">
-      {% csrf_token %}{{ meals_form.as_p }}
-      <input type="submit" class="btn" value="Add To Meal" />
-    </form>
-    <table class="striped">
-      <thead>
-        <tr>
-          <th>Meal</th>
-          <th>Food</th>
-          <th>Portion</th>
-          <th>Calories</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for meals in day.meals_set.all %}
-        <tr>
-          <td>{{meals.meal}}</td>
-          <td>{{meals.food}}</td>
-          <td>{{meals.portion}}</td>
-          <td>{{meals.calories}}</td>
-          <td>{{mdeals.get_meal_display}}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+</div>
+<div class="col s6">
+  <form action="{% url 'add_meals' day.id %}" method="post">
+    {% csrf_token %}{{ meals_form.as_p }}
+    <input type="submit" class="btn grey darken-3" value="Add To Meal" />
+  </form>
+  <table class="striped">
+    <thead>
+      <tr>
+        <th>Meal</th>
+        <th>Food</th>
+        <th>Portion</th>
+        <th>Calories</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for meals in day.meals_set.all %}
+      <tr>
+        <td>{{meals.get_meal_display}}</td>
+        <td>{{meals.food}}</td>
+        <td>{{meals.portion}}</td>
+        <td>{{meals.calories}}</td>
+      </tr>
+      {% endfor %}
+      <tr>
+        <td class="total">Total Calories:</td>
+        <td></td>
+        <td></td>
+        <td class="total">{{total}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 <script>
-  // add additional JS to initialize select below
   var selectEl = document.getElementById("id_meal");
   M.FormSelect.init(selectEl);
 
