--- a/nutritionista/main_app/templates/main_app/food_confirm_delete.html
+++ b/nutritionista/main_app/templates/main_app/food_confirm_delete.html
@@ -1,13 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<h1>Delete Food</h1>
 
-{% block content %}
-  <h1>Delete Food</h1>
+<h4>
+  Are you sure you want to delete
+  <span class="red-text">{{ object.name }}</span>?
+</h4>
 
-  <h4>Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
-
-  <form action="" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="Yes - Delete!" class="btn grey darken-3">
-    <a href="{% url 'foods_detail' object.id %}">Cancel</a>
-  </form>
+<form action="" method="POST">
+  {% csrf_token %}
+  <input type="submit" value="Yes - Delete!" class="btn grey darken-3" />
+  <a href="{% url 'foods_detail' object.id %}">Cancel</a>
+</form>
 {% endblock %}
